--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+v0.06: 2016/12/29
+移動頻度の設定ができるように
+
+
+v0.05: 2016/12/28
+待機中にマウスカーソルの方を向くように
+荒ぶる挙動を修正
+
+
 v0.04: 2016/12/22
 暫定的に時計の追加
 デザイン等は仮のもの
